# project_scrapy

./: authors.json  consumer.py  m_connect.py  main.py  models.py  producer.py  pyproject.toml
