[tool.poetry]
name = "p-scrapy"
version = "0.1.0"
description = ""
authors = ["Ivan-Danyleiko <vanyadanuleyko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
poetry = "^1.8.2"
scrapy = "^2.11.1"
pymongo = "^4.6.2"
mongoengine = "^0.28.2"
pika = "^1.3.2"
faker = "^24.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
